News with tags (taggit) are working

--- a/kat/kat_news/templates/kat_news/news_archive_day.html
+++ b/kat/kat_news/templates/kat_news/news_archive_day.html
@@ -5,5 +5,5 @@
 
 {% block content %}
     {% include "kat_news/news_include.html" %}
-	<div class="news-list"><a href="{% url news_archive_index %}">Все новости</a></div>
+	<div class="news-list"><a href="{% url "news_archive_index" %}">Все новости</a></div>
 {% endblock %}
