--- a/kat/kat_news/templates/kat_news/news_archive_month.html
+++ b/kat/kat_news/templates/kat_news/news_archive_month.html
@@ -4,6 +4,6 @@
 {% block content %}
     {% include "kat_news/news_include.html" %}
 	<div class="news-paginator">
-		<ul><li><a href="{% url news_archive_index %}">Все новости</a></li></ul>
+		<ul><li><a href="{% url "news_archive_index" %}">Все новости</a></li></ul>
 	</div>
 {% endblock %}
