--- a/kat/kat_main_site/templates/kat_main_site/article_detail.html
+++ b/kat/kat_main_site/templates/kat_main_site/article_detail.html
@@ -9,29 +9,10 @@
 {#  <link rel="stylesheet" href="{{ STATIC_URL }}css/myinlines.css" type="text/css" media="screen" />#}
   <script type="text/javascript" src="{{ STATIC_URL }}inline_media/js/inline_media.js"></script>
   <script src="{{ STATIC_URL }}prettyphoto-3.1.3/js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
-
-<script type="text/javascript" charset="utf-8">
-    var prettyparams = {
-        animation_speed: 'fast',
-        slideshow: 3000,
-        autoplay_slideshow: false,
-        opacity: 0.7,
-        show_title: false,
-        allow_resize: true,
-        default_width: 600,
-        default_height: 480,
-        counter_separator_label: '/',
-        overlay_gallery: true,
-        changepicturecallback: function() {$pp_overlay.css({'height':$(document).height()})},
-        };
-    $(document).ready(function(){$("a[rel^='pictureset']").prettyPhoto(prettyparams);
-    });
-
-</script>
 {% endblock %}
 
 {% block content %}
-<H2 style="text-align:center">{{ object.article_title }}</H2>
+<h2 style="text-align:center">{{ object.article_title }}</h2>
 <div class="inline_media_clearfix" style="width:540px; margin:10px auto">
   {{ object.article_abstract|render_inlines }}
 </div>
