--- a/kat/kat/media/css/jquery.bxslider.css
+++ b/kat/kat/media/css/jquery.bxslider.css
@@ -16,7 +16,7 @@
 
 .bx-wrapper {
 	position: relative;
-	margin: 0 auto 60px;
+	margin: 0 auto 30px;
 	padding: 0;
 	*zoom: 1;
 }
@@ -41,7 +41,7 @@
 .bx-wrapper .bx-pager,
 .bx-wrapper .bx-controls-auto {
 	position: absolute;
-	bottom: -30px;
+	/*bottom: -30px;*/
 	width: 100%;
 }
 
@@ -66,7 +66,12 @@
 	font-family: Arial;
 	font-weight: bold;
 	color: #666;
-	padding-top: 20px;
+	/*padding-top: 20px;*/
+  margin-top: -30px;
+}
+
+.bx-pager {
+  z-index:100;
 }
 
 .bx-wrapper .bx-pager .bx-pager-item,
