--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -18,53 +18,63 @@
       <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
           <ul class="nav">
-            <li class="divider-vertical"></li>
+            <li ><a href="/news/">Главная</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Тренування</a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Про Спорт</a>
                 <ul class="dropdown-menu">
-                  <li><a href="/articles/">Статті</a></li>
-                  <li><a href="/literature/">Література</a></li>
-                  <li><a href="/equipment/"">Інвентар</a></li>
-                  <li><a href="/clubs/"">Клуби</a></li>
+                  <li><a href="/disciplines/">Дисциплины</a></li>
+                  <li><a href="/history/">История</a></li>
+                  <li><a href="/development/">Развитие</a></li>
+                  <li><a href="/rules/">Правила</a></li>
+                  <li><a href="/articles/">Статьи</a></li>
+                  <li><a href="/literature/">Литература</a></li>
                   <li><a href="/faq/">FAQ</a></li>
                 </ul>
             </li>
-            <li class="dropdown"><a href="#"  class="dropdown-toggle" data-toggle="dropdown">Змагання</a>
+            <li class="dropdown"><a href="#"  class="dropdown-toggle" data-toggle="dropdown">Соревнования</a>
               <ul class="dropdown-menu">
-                <li><a href="/calendar/">Календар</a></li>
-                <li><a href="/records/">Рекорди</a></li>
-                <li><a href="/qualifying/">Нормативи</a></li>
-                <li><a href="/fita/">Статут FITA</a></li>
+                <li><a href="/calendar/">Календарь</a></li>
+                <li><a href="/ranking/">Рейтинг</a></li>
+                <li><a href="/results/">Результаты</a></li>
+                <li><a href="/records/">Рекорды</a></li>
+                <li><a href="/qualifying/">Нормативы</a></li>
               </ul>
              </li>
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Клуб</a>
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Организация</a>
                  <ul class="dropdown-menu">
-                    <li><a href="/news/">Новини</a></li>
-                    <li><a href="/photos/">Фотографії</a></li>
-                    <li><a href="/hall_of_fame/">Дошка пошани</a></li>
-                    <li><a href="/flea_market/">Барахолка</a></li>
+                    <li><a href="/organization/">Про Нас</a></li>
+                    <li><a href="/structure/">Структура</a></li>
+                    <li><a href="/activities/">Деятельность</a></li>
+                    <li><a href="/events/">События</a></li>
                  </ul>
             </li>
-            <li ><a href="/contacts/">Контакти</a></li>
-            <li ><a href="/links/">Посилання</a></li>
+            <li ><a href="/forum/">Форум</a></li>
+            <li ><a href="/photos/">Фото</a></li>
+            <li ><a href="/contacts/">Контакты</a></li>
+            <li ><a href="/links/">Ссылки</a></li>
           </ul>
         </div>
       </div>
         <div class="row-fluid">
-            <div class="span12">
-              <ul class="bxslider">
-                  <li><img src="{% static "kat_main_site/logo1.jpg" %}" alt="Logo1"/></li>
-                  <li><img src="{% static "kat_main_site/logo2.jpg" %}" alt="Logo2"/></li>
-              </ul>
-          </div>
 		    </div>
         <div class="container">
-            <div class="span8">{% block content %}{% endblock %}</div>
-            <div class="span4">
-                <div class="well">
-                    Sidebar
-                </div>
-            </div>
+          <div class="logo-container">
+            <ul class="bxslider noindent">
+              <li><img src="{% static "kat_main_site/logo1.jpg" %}" alt="Logo1"/></li>
+              <li><img src="{% static "kat_main_site/logo2.jpg" %}" alt="Logo2"/></li>
+            </ul>
+          </div>
+          <div class="span12">
+            {% block content %}{% endblock %}
+          </div>
+{#            <div class="span8">#}
+{#              {% block content %}{% endblock %}#}
+{#            </div>#}
+{#            <div class="span4">#}
+{#                <div class="well">#}
+{#                    Sidebar#}
+{#                </div>#}
+{#            </div>#}
         </div>
         <footer id="footer">
             Дизайн и реализация: 3PS. Copyright &copy; 2013, <a href="http://3ps.if.ua">3PS</a>.
