--- a/kat/kat/templates/kat_calendar.html
+++ b/kat/kat/templates/kat_calendar.html
@@ -1,6 +1,6 @@
 {% extends "kat_base.html" %}
 {% block title %}Calendar{% endblock %}
-{% block content %}
+{% block global_content %}
 
   {% gencal queryset %}
 
