--- a/kat/kat_news/templates/kat_news/news_archive.html
+++ b/kat/kat_news/templates/kat_news/news_archive.html
@@ -1,7 +1,7 @@
 {% extends "kat_news/news_base.html" %}
 {% block title %}Последние новости{% endblock %}
 {% block content_title %}Последние новости{% endblock %}
-{% block content %}
+{% block global_content %}
     {% include "kat_news/news_include.html" %}
 
 	<!-- Years list -->
