--- a/kat/kat_news/templates/kat_news/news_archive_year.html
+++ b/kat/kat_news/templates/kat_news/news_archive_year.html
@@ -1,7 +1,7 @@
 {% extends "kat_news/news_base.html" %}
 {% block title %}Новости за {{ year }} год{% endblock %}
 {% block content_title %}Новости за {{ year }} год{% endblock %}
-{% block content %}
+{% block global_content %}
     {% include "kat_news/news_include.html" %}
      <div class="pagination pagination-small pagination-centered">
       <ul>
