--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -65,7 +65,7 @@
             </ul>
           </div>
           <div class="span12">
-            {% block content %}{% endblock %}
+            {% block global_content %}{% endblock %}
           </div>
 {#            <div class="span8">#}
 {#              {% block content %}{% endblock %}#}
