--- a/kat/kat_news/templates/kat_news/news_archive_month.html
+++ b/kat/kat_news/templates/kat_news/news_archive_month.html
@@ -1,7 +1,7 @@
 {% extends "kat_news/news_base.html" %}
 {% block title %}Новости за {{ month|date:"F Y" }} года{% endblock %}
 {% block content_title %}Новости за {{ month|date:"F Y" }} года{% endblock %}
-{% block content %}
+{% block global_content %}
     {% include "kat_news/news_include.html" %}
 	<div class="pagination pagination-small pagination-centered">
 		<ul><li><a href="{% url "news_archive_index" %}">Все новости</a></li></ul>
