--- a/kat/kat_news/templates/kat_news/news_detail.html
+++ b/kat/kat_news/templates/kat_news/news_detail.html
@@ -3,7 +3,7 @@
 {% block title %}{{ object.title }}{% endblock %}
 {% block content_title %}{{ object.title }}{% endblock %}
 
-{% block content %}
+{% block global_content %}
     <div class="news-date">{{ object.date|date:"d" }} {{ object.month }} {{ object.date|date:"Y" }}</div>
     <div class="news-text">{{ object.text|safe }}</div>
     <div class="news-list"><a href="{% url "news_archive_index" %}">Все новости</a></div>
