--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -57,7 +57,7 @@
       </div>
         <div class="row-fluid">
 		    </div>
-        <div class="container">
+        <div class="main_container">
           <div class="logo-container">
             <ul class="bxslider noindent">
               <li><img src="{% static "kat_main_site/logo1.jpg" %}" alt="Logo1"/></li>
