Added new logos to the kat_base.html

--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -60,8 +60,9 @@
         <div class="main_container">
           <div class="logo-container">
             <ul class="bxslider noindent">
-              <li><img src="{% static "kat_main_site/logo1.jpg" %}" alt="Logo1"/></li>
-              <li><img src="{% static "kat_main_site/logo2.jpg" %}" alt="Logo2"/></li>
+              <li><img src="{% static "kat_main_site/Logo1.jpg" %}" alt="Logo1"/></li>
+              <li><img src="{% static "kat_main_site/Logo2.jpg" %}" alt="Logo2"/></li>
+              <li><img src="{% static "kat_main_site/Logo3.jpg" %}" alt="Logo3"/></li>
             </ul>
           </div>
           <div class="span12">
