--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -39,7 +39,7 @@
                 <li><a href="/records/">Рекорды</a></li>
                 <li><a href="/qualifying/">Нормативы</a></li>
               </ul>
-             </li>
+            </li>
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Организация</a>
                  <ul class="dropdown-menu">
                     <li><a href="/organization/">Про Нас</a></li>
@@ -52,6 +52,15 @@
             <li ><a href="/photos/">Фото</a></li>
             <li ><a href="/contacts/">Контакты</a></li>
             <li ><a href="/links/">Ссылки</a></li>
+          </ul>
+          <ul class="nav pull-right">
+            {% if user.is_authenticated %}
+              <li><a href="/accounts/logout/">Sign Out</a></li>
+              <li ><p class="navbar-text pull-right" style="margin-right: 20px;">Welcome, {{ user.username }}!</p></li>
+            {% else %}
+              <li><a href="/accounts/signup/">Get account</a></li>
+              <li><a href="/accounts/login/">Sign In</a></li>
+            {% endif %}
           </ul>
         </div>
       </div>
