--- a/kat/kat/media/css/style.css
+++ b/kat/kat/media/css/style.css
@@ -65,6 +65,12 @@ body,html{
           border-radius: 20px;
 }
 
+img.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .news-date {
 
 }
