--- a/kat/kat/templates/kat_main_page.html
+++ b/kat/kat/templates/kat_main_page.html
@@ -1,6 +1,6 @@
 {% extends "kat_base.html" %}
 {% block title %}Головна сторінка{% endblock %}
-{% block globalcontent %}
+{% block global_content %}
 
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis convallis ligula. Donec quis semper dui. Mauris sit amet commodo eros. Vestibulum adipiscing convallis purus, at condimentum libero. Mauris mattis arcu fermentum dolor scelerisque sollicitudin a id mauris. Nulla dui ante, eleifend et aliquam vel, lacinia in felis. Integer sed lectus volutpat, mattis velit ut, hendrerit metus. Cras porta elit tortor, quis sagittis tellus ultricies quis. Pellentesque suscipit imperdiet feugiat. Vivamus nunc ligula, hendrerit a mattis sed, tincidunt at metus. Nulla facilisi. Proin eget eleifend leo. Quisque magna mi, bibendum vitae semper id, venenatis ut enim. Donec eleifend tortor erat, ut mollis erat viverra ut. Curabitur laoreet nulla massa, eget accumsan neque interdum at. Cras at hendrerit lorem.
