--- a/kat/kat_main_site/templates/calendar/kat_calendar_month_view.html
+++ b/kat/kat_main_site/templates/calendar/kat_calendar_month_view.html
@@ -4,7 +4,7 @@
   <link href="/media/css/calendar.css" rel="stylesheet" type="text/css">
 {% endblock %}
 
-{% block content %}
+{% block global_content %}
 
 {#<a href= "{% url "month" year month "prev" %}">&lt;&lt; Prev</a>#}
 {#<a href= "{% url "month" year month "next" %}">Next &gt;&gt;</a>#}
