--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -49,7 +49,7 @@
                  </ul>
             </li>
             <li ><a href="/forum/">Форум</a></li>
-            <li ><a href="/photos/">Фото</a></li>
+            <li ><a href="/gallery/">Фото</a></li>
             <li ><a href="/contacts/">Контакты</a></li>
             <li ><a href="/links/">Ссылки</a></li>
           </ul>
@@ -69,9 +69,9 @@
         <div class="main_container">
           <div class="logo-container">
             <ul class="bxslider noindent">
-              <li><img src="{% static "kat_main_site/Logo1.jpg" %}" alt="Logo1"/></li>
-              <li><img src="{% static "kat_main_site/Logo2.jpg" %}" alt="Logo2"/></li>
-              <li><img src="{% static "kat_main_site/Logo3.jpg" %}" alt="Logo3"/></li>
+              <li><img class="center" src="{% static "kat_main_site/Logo1.jpg" %}" alt="Logo1"/></li>
+              <li><img class="center" src="{% static "kat_main_site/Logo2.jpg" %}" alt="Logo2"/></li>
+              <li><img class="center" src="{% static "kat_main_site/Logo3.jpg" %}" alt="Logo3"/></li>
             </ul>
           </div>
           <div class="span12">
