--- a/kat/katgallery/templates/gallery.html
+++ b/kat/katgallery/templates/gallery.html
@@ -2,7 +2,7 @@
 {% load extras %}
 {% load i18n %}
 {% load pagination_tags %}
-{% block content %}
+{% block global_content %}
 <ul class="thumbnails">
     <li  class="span3">
         <div class="thumbnail">
@@ -19,11 +19,11 @@
         <ul class="thumbnails">
             <li  class="span3">
                 <div class="thumbnail">
-                    <a href="{% url katgallery.views.album_list album.GetAlbumId %}" >
+                    <a href="{% url "katgallery.views.album_list" album.GetAlbumId %}" >
                     <img src="{%  thumbnail_url album %}">
                     </a>
                     <div class="album-name">
-                        <a href="{% url katgallery.views.album_list album.GetAlbumId %}">{{  album.title.text }}</a>
+                        <a href="{% url "katgallery.views.album_list" album.GetAlbumId %}">{{  album.title.text }}</a>
                     </div>
                 </div>
             </li>
