--- a/kat/katgallery/templates/gbase.html
+++ b/kat/katgallery/templates/gbase.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'kat_base.html' %}
 {% load extras %}
 {% load i18n %}
 {% block head %}
 {% include 'pphoto.html' %}
 {% endblock %}
 {% load pagination_tags %}
-{% block content %}{% endblock %}
+{% block global_content %}{% endblock %}
