Add static pages; Refactor code

--- a/kat/kat/templates/kat_contacts_page.html
+++ b/kat/kat/templates/kat_contacts_page.html
@@ -2,6 +2,10 @@
 {% block title %}Контакты{% endblock %}
 {% block global_content %}
 
+<h3>Контакты</h3><hr>
 
+<address>
+  <a href="mailto:tetiana.poznakova@gmail.com">Татьяна Познякова</a>
+</address>
 
 {% endblock %}
