--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -18,7 +18,8 @@
       <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
           <ul class="nav">
-            <li ><a href="/news/">Главная</a></li>
+            <li ><a href="/">Главная</a></li>
+            <li ><a href="/news/">Новости</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Про Спорт</a>
                 <ul class="dropdown-menu">
@@ -33,6 +34,7 @@
             </li>
             <li class="dropdown"><a href="#"  class="dropdown-toggle" data-toggle="dropdown">Соревнования</a>
               <ul class="dropdown-menu">
+                <li><a href="/tournament-registration/">Регистрация на Соревнования</a></li>
                 <li><a href="/calendar/">Календарь</a></li>
                 <li><a href="/ranking/">Рейтинг</a></li>
                 <li><a href="/results/">Результаты</a></li>
