--- a/kat/kat/templates/kat_main_page.html
+++ b/kat/kat/templates/kat_main_page.html
@@ -1,9 +1,11 @@
 {% extends "kat_base.html" %}
-{% block title %}Головна сторінка{% endblock %}
+{% block title %}Главная{% endblock %}
 {% block global_content %}
 
 <h3>Добро Пожаловать!</h3><hr>
 
-У нас Вы найдете последние новости Федерации Блочного Лука Украины, информацию о предстоящих соревнованиях и событиях,
-  а также множество другой полезной информации.
+Приветствуем Вас на сайте Федерации стрельбы из блочного лука Украины!
+  Здесь вы найдете статьи и новости о луках, соревнованиях, спортсменах и их результатах,
+  а также много другой полезной информации о нашем интересном и увлекательном виде спорта.
+  Присоединяйтесь, мы всегда рады Вас видеть!
 {% endblock %}
