--- a/kat/kat/templates/competitions/kat_competitionregistration_page.html
+++ b/kat/kat/templates/competitions/kat_competitionregistration_page.html
@@ -6,7 +6,7 @@
 {% block global_content %}
 
 <h3>Регистрация на Соревнования</h3><hr>
-    <form id="competition_register_form" method="post" action="{% url "account_signup" %}" autocapitalize="off" class="form-horizontal">
+    <form id="competition_register_form" method="post" action="{% url "tournament_registration" %}" autocapitalize="off" class="form-horizontal">
 
 		{% csrf_token %}
 <fieldset>
@@ -39,10 +39,10 @@
 
             <div class="controls">
               <label class="radio">
-              <input type="radio" name="sex" id="comp_reg-sex" value="male">Мужской
+              <input type="radio" name="sex" id="comp_reg-sex" value="M">Мужской
                                      </label>
               <label class="radio">
-              <input type="radio" name="sex" id="comp_reg-sex" value="female">Женский
+              <input type="radio" name="sex" id="comp_reg-sex" value="F">Женский
                                                         </label>
             </div>
         </div>
