--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Kyiv Archery Team :: {% block title %}{% endblock %}</title>
+		<title>Ukrainian Compound Archery :: {% block title %}{% endblock %}</title>
       <script src="/media/js/jquery-latest.js"></script>
       <script src="/media/js/jquery.bxslider.min.js"></script>
       <script src="/media/js/logo.js"></script>
