--- a/kat/kat/templates/kat_main_page.html
+++ b/kat/kat/templates/kat_main_page.html
@@ -1,11 +1,12 @@
 {% extends "kat_base.html" %}
 {% block title %}Главная{% endblock %}
 {% block global_content %}
-
+<div id="welcome">
 <h3>Добро Пожаловать!</h3><hr>
 
+  <h4>
 Приветствуем Вас на сайте Федерации стрельбы из блочного лука Украины!
   Здесь вы найдете статьи и новости о луках, соревнованиях, спортсменах и их результатах,
   а также много другой полезной информации о нашем интересном и увлекательном виде спорта.
-  Присоединяйтесь, мы всегда рады Вас видеть!
+  Присоединяйтесь, мы всегда рады Вас видеть!</h4></div>
 {% endblock %}
