Comment not working links; prettify participants list; add faq; add forum css

--- a/kat/kat/media/css/style.css
+++ b/kat/kat/media/css/style.css
@@ -157,3 +157,24 @@ ul.noindent {
   text-align: center;
   font-family:"";
 }
+
+.note {
+  text-align: center;
+  font-family:"";
+  color: grey;
+}
+
+.term {
+  text-decoration:underline;
+  clear:both;
+}
+
+#faq-body img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.article-author {
+  text-align: right;
+}
