--- a/kat/kat/templates/sport/kat_faq_page.html
+++ b/kat/kat/templates/sport/kat_faq_page.html
@@ -2,7 +2,134 @@
 {% block title %}FAQ{% endblock %}
 {% block global_content %}
 
-<h3>FAQ</h3><hr>
+  <div id="welcome">
+    <h3>Лучная Терминология</h3><hr>
+  </div>
+  <div class="note">(раздел постоянно обновляется)</div><br>
 
+    <div id="faq-body">
+
+    <p>Эта страничка о лучной терминологии. Здесь вы найдете основную информацию о луках, стрелах и
+      прочей лучной утвари, узнаете, чем они отличаются и как их использовать.</p>
+    <img border="0" height="320"
+         src="http://3.bp.blogspot.com/-1UMmyIihnvQ/TWDs3RpXkcI/AAAAAAAAAD0/O4IkZX_kDrU/s320/65402_444151994248_729354248_5137092_7697657_n.jpg"
+         width="247" />
+
+    <p>Для начала давайте разберемся, какими бывают луки.</p>
+    <p>Начнем с <span class="term">традиционных</span>. Можно сказать, это исторический вид луков.
+      Их придумали очень-очень
+      давно и использовали испокон веков. Материал изготовления – дерево. В некоторых странах –
+      бамбук. Может быть, используются и другие природные материалы. На таких луках вы не найдете
+      ни прицела, ни стабилизаторов. Чаще всего используются при исторических реконструкциях, но в
+      Украине проводятся и специально организованные соревнования из традиционного лука. Такие
+      турниры очень красочны и колоритны, ведь участники соревнуются не только в меткости, но и в
+      скорости, быстроте реакции, а к тому же и в красоте костюмов.
+    </p>
+    <img border="0" height="212"
+         src="http://4.bp.blogspot.com/-wQb3EbXmFKo/TWD0Cy3rqBI/AAAAAAAAAEc/554xPfbAyAM/s320/IMG_2917.JPG"
+         width="320" />
+
+    <p>Идем далее. <span class="term">Классические луки</span>. Они же т.н. олимпики.
+      Такие луки уже считаются спортивными.
+      Из них стреляют на олимпийских играх. Состоят из рукояти, вставных плеч; к рукояти крепятся
+      прицельная планка и стабилизаторы. Кто смотрел Олимпийские игры в Пекине, тот знает, что
+      золотую медаль в 2008 году завоевал наш соотечественник, харьковчанин Виктор Рубан.
+    </p>
+    <img border="0" height="240"
+         src="http://2.bp.blogspot.com/-iwcmpGFq7hU/TWD0t9jBCwI/AAAAAAAAAEg/Sr8zkoSJmAE/s320/DSC00026.JPG"
+         width="320" />
+
+    <p>Итак, остались у нас только <span class="term">блочные луки</span>. Сокращенно называют
+      просто блок, в некоторых случаях – компаунд (слово пришло к нам из западной терминологии,
+      там такие луки называют не иначе, как compound). Компаунды – это эдакие махины, разработанные
+      с использованием последних технологий. Тетивы (да, их у компаунда несколько!) с  таких луков
+      обычно не снимаются; прицел и стабилизаторы, как и для классического лука, прикручиваются.
+      Блочные луки тоже являются спортивными, однако пока еще не внесены в программу Олимпиады. От
+      себя добавлю, что я стреляю как раз из блока, хотя раньше несколько лет тренировалась и
+      соревновалась из олимпика. Сейчас есть мечта, стрелять из обоих луков одновременно. Но пока на
+      это, увы, не хватает времени. </p>
+    <img border="0" height="240"
+         src="http://4.bp.blogspot.com/-WyUGX39isk4/TWD4QcgxpRI/AAAAAAAAAEk/PbQa6sQDGHY/s320/P9100037.JPG"
+         width="320" />
+
+    <p>Ну а теперь плавно перейдем к <span class="term">стрелам</span>. Стрелы бывают деревянные,
+      алюминиевые и карбоновые.</p>
+    <p><span class="term">Деревянные стрелы</span> используются с традиционными луками. Перья на
+      таких стрелах, в основном, натуральные. Выглядят очень внушительно, особенно в большом
+      количестве.</p>
+    <img border="0" height="240"
+         src="http://1.bp.blogspot.com/--kEFPX5vd2A/TWGLUjHLSUI/AAAAAAAAAEw/rtXQ1VB4dLg/s200/arrow_1.jpg"
+         width="320" />
+
+    <p><span class="term">Алюминиевые стрелы</span> имеют разную толщину, которая выбирается в
+      зависимости от параметров лука и цели использования (так, например, зимой я стреляю комплектом
+      толстенных алюминиевых стрел, что позволяет чаще «цеплять» десятки на короткой 18-метровой
+      дистанции – такие вот мы, лучники хитрые). Эти стрелы используются при стрельбе из спортивных
+      луков. Перья на них либо резиновые, либо гусиные – и та еще морока их на эту стрелу приклеить!
+      (для этого используется специальная пероклеечная машинка) :) Но это ничто по сравнению с
+      закрученными перьями spin-wing, которые клеятся на тонкие летние карбоновые стрелы. Но, обо
+      всем по порядку.</p>
+    <img border="0" height="240"
+         src="http://2.bp.blogspot.com/-FRAkj1Gp9zs/TWGNDwRIyMI/AAAAAAAAAE0/jRjPQdnzPJg/s200/ArcheryArrows02.jpg"
+         width="320" />
+
+    <p><span class="term">Стрелы карбоновые.</span> Тоже есть очень тонкие и очень толстые, как и
+      алюминиевые. Толстые – для зимы, тонкие – для лета, при стрельбе на дальние дистанции. Перья
+      на тонких карбоновых стрелах исключительно синтетические. Классики в основном используют
+      закрученные перья spin-wing (с такими перьями стрела более устойчива к ветру); блочники
+      предпочитают прямые резиновые перья с ребрами жесткости (учитывая дальность, с которой
+      стреляет блочный лук, о влиянии ветра на стрелы можно не задумываться).
+      Все стрелы обладают еще таким параметром, как жесткость. Ее приходится учитывать, при
+      подборке стрел под определенный лук.</p>
+    <img border="0" height="240"
+         src="http://3.bp.blogspot.com/-52NmtMnKy94/TWGNUpb7qtI/AAAAAAAAAE4/vb7GETc6r-I/s320/arrows.jpg"
+         width="320" />
+
+    <p>Теперь перейдем к предметам обихода лучника. К таким относятся колчан, крага, нагрудник и
+      напальчник (для стрелков из классического и традиционного лука) или релиз (для стрелков из
+      блочного лука). Остановимся на каждом по отдельности.</p>
+
+    <p><span class="term">Колчан</span> – это некий переносной футляр для стрел. Колчан является
+      непременным атрибутом любого лучника. Колчаны делают из кожи, плотной таки и других материалов.
+      Каждый выбирает тот вариант, который ему больше нравится. Стрелки из традиционного лука часто
+      делают колчаны, стилизованные под старину.</p>
+    <img border="0" height="240"
+         src="http://7strel.ru/_mod_files/ce_images/eshop/chehol_dinamik_505.jpg"
+         width="320" />
+
+    <p><span class="term">Крага</span> – это кусок кожи или пластмассы, который защищает руку лучника
+      от удара тетивой при выстреле.</p>
+    <img border="0" height="240"
+         src="http://www.pnevmach.ru/wp-content/uploads/2011/06/kragi.jpg"
+         width="320" />
+
+    <p><span class="term">Напальчник</span> надевается на пальцы лучника, которыми тот захватывает
+      тетиву. Предназначение – защита кожи пальцев. Сами понимаете, луки бывают очень и очень мощными,
+      поэтому захватывать тетиву без защиты было бы больно и нелогично. Стрелки из традиционного лука
+      используют перчатку вместо напальчника.</p>
+    <img border="0" height="240"
+         src="http://www.archery-sila.ru/images/stories/stati/fingertab-1.jpg"
+         width="320" />
+
+    <p><span class="term">Релиз</span> – механическое устройство для спуска тетивы, которое используют
+      стрелки из блочного лука вместо напальчника. На сегодняшний день существует множество различных
+      конструкций релизов, и каждый лучник выбирает тот, который ему больше подходит. Принцип спуска
+      тоже отличается: так, релиз может быть курковым, триггерным, переломным, тяговым или срабатывать
+      на отпускание курка.  Нагрудник предназначен для того, чтобы тетива при выстреле не цеплялась за
+      одежду, и выглядит следующим образом:</p>
+    <img border="0" height="240"
+         src="http://jeffsspecialtysports.com/images/products/detail/Target20420.jpg"
+         width="320" />
+
+    <p><span class="term"> Нагрудник</span> предназначен для того, чтобы тетива при выстреле не
+      цеплялась за одежду, и выглядит следующим образом:</p>
+    <img border="0" height="240"
+         src="http://www.archery-sila.ru/images/stories/sorrels/chestqua.jpg"
+         width="320" />
+
+     <p></p>
+    </div>
+
+  <div class="article-author">Автор: Дина Курицина</div><br>
 
 {% endblock %}
