--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -23,33 +23,33 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Про Спорт</a>
                 <ul class="dropdown-menu">
-                  <li><a href="/disciplines/">Дисциплины</a></li>
-                  <li><a href="/history/">История</a></li>
-                  <li><a href="/development/">Развитие</a></li>
-                  <li><a href="/rules/">Правила</a></li>
+                  <li><a href="/faq/">Терминология</a></li>
+{#                  <li><a href="/history/">История</a></li>#}
+{#                  <li><a href="/development/">Развитие</a></li>#}
+{#                  <li><a href="/rules/">Правила</a></li>#}
                   <li><a href="/articles/">Статьи</a></li>
                   <li><a href="/literature/">Литература</a></li>
-                  <li><a href="/faq/">FAQ</a></li>
                 </ul>
             </li>
             <li class="dropdown"><a href="#"  class="dropdown-toggle" data-toggle="dropdown">Соревнования</a>
               <ul class="dropdown-menu">
                 <li><a href="/tournament-registration/">Регистрация на Соревнования</a></li>
-                <li><a href="/calendar/">Календарь</a></li>
-                <li><a href="/ranking/">Рейтинг</a></li>
-                <li><a href="/results/">Результаты</a></li>
-                <li><a href="/records/">Рекорды</a></li>
-                <li><a href="/qualifying/">Нормативы</a></li>
+                <li><a href="/participants-lists/">Списки участников</a></li>
+{#                <li><a href="/calendar/">Календарь</a></li>#}
+{#                <li><a href="/ranking/">Рейтинг</a></li>#}
+{#                <li><a href="/results/">Результаты</a></li>#}
+{#                <li><a href="/records/">Рекорды</a></li>#}
+{#                <li><a href="/qualifying/">Нормативы</a></li>#}
               </ul>
             </li>
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Организация</a>
-                 <ul class="dropdown-menu">
-                    <li><a href="/organization/">Про Нас</a></li>
-                    <li><a href="/structure/">Структура</a></li>
-                    <li><a href="/activities/">Деятельность</a></li>
-                    <li><a href="/events/">События</a></li>
-                 </ul>
-            </li>
+{#            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Организация</a>#}
+{#                 <ul class="dropdown-menu">#}
+{#                    <li><a href="/organization/">Про Нас</a></li>#}
+{#                    <li><a href="/structure/">Структура</a></li>#}
+{#                    <li><a href="/activities/">Деятельность</a></li>#}
+{#                    <li><a href="/events/">События</a></li>#}
+{#                 </ul>#}
+{#            </li>#}
             <li ><a href="/forum/">Форум</a></li>
             <li ><a href="/gallery/">Фото</a></li>
             <li ><a href="/contacts/">Контакты</a></li>
