--- a/kat/kat/media/css/news.css
+++ b/kat/kat/media/css/news.css
@@ -4,7 +4,7 @@
  */
 
 .news-list {
-    margin: 20px 25px 0;
+    margin: 20px 25px 20px;
 	color: grey;
 }
 
@@ -46,7 +46,7 @@
 }
 
 .news-text {
-	color: grey;
+  margin: 20px;
 	text-align: justify;
 }
 
