fix backgtound color; fix footer to the bottom

--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -87,6 +87,7 @@
 {#                    Sidebar#}
 {#                </div>#}
 {#            </div>#}
+        <div class="clear"></div>
         </div>
         <footer id="footer">
             Дизайн и реализация: 3PS. Copyright &copy; 2013, <a href="http://3ps.if.ua">3PS</a>.
