--- a/kat/kat/media/css/style.css
+++ b/kat/kat/media/css/style.css
@@ -18,7 +18,7 @@
 }
 
 body,html{
- height: 100%;
+  min-height: 100%;
 }
 
 .main_container {
@@ -26,13 +26,11 @@ body,html{
   min-height: 100%;
   margin: 40px auto 0;
   background: #fffce8;
-	/*background-image:url('/media/images/');*/
-	background-repeat:repeat;
 }
 
 .logo-container {
   margin: 0 6px 0;
-  width: 988;
+  width: 988px;
 }
 
 #footer {
@@ -43,7 +41,9 @@ body,html{
 	color: #261001;
 	text-align: center;
 	padding-top: 4px;
-  /*bottom:0;*/
+  position:fixed;
+  width:100%;
+  bottom:0;
   clear:both;
 }
 
@@ -69,10 +69,6 @@ img.center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
-
-.news-date {
-
 }
 
 .form-actions {
