--- a/kat/kat/media/css/style.css
+++ b/kat/kat/media/css/style.css
@@ -18,12 +18,14 @@
 }
 
 body,html{
-  min-height: 100%;
+  height: 100%;
 }
 
 .main_container {
 	width: 1000px;
+  height: auto !important;
   min-height: 100%;
+  height: 100%;
   margin: 40px auto 0;
   background: #fffce8;
 }
