--- a/kat/kat/media/css/calendar.css
+++ b/kat/kat/media/css/calendar.css
@@ -20,3 +20,31 @@
    overflow: hidden;
 }
 
+.empty {
+
+}
+
+.cal-day {
+     height: 38px;
+}
+
+.month {
+  float: left;
+  border: 1px solid #999;
+   width: 76px;
+   height: auto;
+   padding: 4px;
+   margin-left: 5px;
+
+}
+
+.current {
+  float: left;
+  border: 1px solid #999;
+  background-color: #ffb45f;
+   width: 76px;
+   height: auto;
+   padding: 4px;
+   margin-left: 5px;
+
+}
