--- a/kat/kat_main_site/templates/calendar/kat_calendar_page.html
+++ b/kat/kat_main_site/templates/calendar/kat_calendar_page.html
@@ -1,7 +1,29 @@
 {% extends "kat_base.html" %}
 {% block title %}Календарь соревнований{% endblock %}
+
+{% block head %}
+  <link href="/media/css/calendar.css" rel="stylesheet" type="text/css">
+{% endblock %}
+
 {% block global_content %}
 
-  {% gencal queryset %}
+<a href="{% url "main" year|add:'-3' %}">&lt;&lt; Prev</a>
+<a href="{% url "main" year|add:'3' %}">Next &gt;&gt;</a>
+
+    {% for year, months in years %}
+        <div class="clear"></div>
+        <h4>{{ year }}</h4>
+        {% for month in months %}
+            <div class=
+            {% if month.current %}"current"{% endif %}
+            {% if not month.current %}"month"{% endif %} >
+                {% if month.entry %}<b>{% endif %}
+                <a href="{% url "month" year month.n %}">{{ month.name }}</a>
+                {% if month.entry %}</b>{% endif %}
+            </div>
+
+            {% if month.n == 6 %}<br/><br/>{% endif %}
+        {% endfor %}
+    {% endfor %}
 
 {% endblock %}
