Migrate calendarevent; add link back to the calendar; clickable area for months

--- a/kat/kat_main_site/templates/calendar/kat_calendar_month_view.html
+++ b/kat/kat_main_site/templates/calendar/kat_calendar_month_view.html
@@ -8,6 +8,7 @@
 {% block global_content %}
 
 <a href= "{% url "month" year month "prev" %}">&lt;&lt; Prev</a>
+<a href= "{% url "main"%}">Calendar</a>
 <a href= "{% url "month" year month "next" %}">Next &gt;&gt;</a>
 
 <h4>{{ mname }} {{ year }}</h4>
