--- a/kat/kat/media/css/jquery.bxslider.css
+++ b/kat/kat/media/css/jquery.bxslider.css
@@ -24,18 +24,20 @@
 .bx-wrapper img {
 	max-width: 100%;
 	display: block;
+  	height: 480px;
+
 }
 
 /** THEME
 ===================================*/
 
 .bx-wrapper .bx-viewport {
-	-moz-box-shadow: 0 0 5px #ccc;
-	-webkit-box-shadow: 0 0 5px #ccc;
-	box-shadow: 0 0 5px #ccc;
-	border: solid #fff 5px;
+	/*-moz-box-shadow: 0 0 5px #ccc;*/
+	/*-webkit-box-shadow: 0 0 5px #ccc;*/
+	/*box-shadow: 0 0 5px #ccc;*/
+	/*border: solid #fff 5px;*/
 	left: -5px;
-	background: #fff;
+	/*background: #fff;*/
 }
 
 .bx-wrapper .bx-pager,
