--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -6,8 +6,11 @@
       <script src="/media/js/jquery-latest.js"></script>
       <script src="/media/js/jquery.bxslider.min.js"></script>
       <script src="/media/js/logo.js"></script>
+      <script src="/media/bootstrap/js/bootstrap.min.js"></script>
+      <script src="/media/js/bootstrap-hover-dropdown.js"></script>
 		  {% block head %}{% endblock %}
       <link href="/media/bootstrap/css/bootstrap.css" rel="stylesheet"/>
+      <link rel="stylesheet" href="/media/font-awesome/css/font-awesome.min.css">
       <link href="/media/css/jquery.bxslider.css" rel="stylesheet"/>
       <link href="/media/css/style.css" rel="stylesheet" type="text/css">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -15,13 +18,15 @@
 	</head>
 	<body>
     <script src="/media/bootstrap/js/bootstrap.js"></script>
-      <div class="navbar navbar-fixed-top">
+      <div class="navbar ">
         <div class="navbar-inner">
+                <div class="container">
+
           <ul class="nav">
             <li ><a href="/">Главная</a></li>
             <li ><a href="/news/">Новости</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Про Спорт</a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000">Про Спорт</a>
                 <ul class="dropdown-menu">
                   <li><a href="/faq/">Терминология</a></li>
 {#                  <li><a href="/history/">История</a></li>#}
@@ -31,7 +36,7 @@
                   <li><a href="/literature/">Литература</a></li>
                 </ul>
             </li>
-            <li class="dropdown"><a href="#"  class="dropdown-toggle" data-toggle="dropdown">Соревнования</a>
+            <li class="dropdown"><a href="#"  class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" >Соревнования</a>
               <ul class="dropdown-menu">
                 <li><a href="/tournament-registration/">Регистрация на Соревнования</a></li>
                 <li><a href="/participants-lists/">Списки участников</a></li>
@@ -54,28 +59,35 @@
             <li ><a href="/gallery/">Фото</a></li>
             <li ><a href="/contacts/">Контакты</a></li>
             <li ><a href="/links/">Ссылки</a></li>
-          </ul>
-          <ul class="nav pull-right">
             {% if user.is_authenticated %}
               <li><a href="/accounts/logout/">Sign Out</a></li>
-              <li ><p class="navbar-text pull-right" style="margin-right: 20px;">Welcome, {{ user.username }}!</p></li>
+              <li ><p class="navbar-text"">Welcome, {{ user.username }}!</p></li>
             {% else %}
               <li><a href="/accounts/signup/">Get account</a></li>
               <li><a href="/accounts/login/">Sign In</a></li>
             {% endif %}
           </ul>
+                <a href="/" class="navbar-brand">
+{#                  <img class="center" src="{% static "kat_main_site/Logo7.png" %}" alt="Logo1"/>#}
+                </a>
+                          </div>
         </div>
       </div>
-        <div class="row-fluid">
-		    </div>
-        <div class="main_container">
-          <div class="logo-container">
+              <div class="logo-container">
             <ul class="bxslider noindent">
-              <li><img class="center" src="{% static "kat_main_site/Logo1.jpg" %}" alt="Logo1"/></li>
-              <li><img class="center" src="{% static "kat_main_site/Logo2.jpg" %}" alt="Logo2"/></li>
-              <li><img class="center" src="{% static "kat_main_site/Logo3.jpg" %}" alt="Logo3"/></li>
+{#              <li><img class="center" src="{% static "kat_main_site/Logo1.jpg" %}" alt="Logo1"/></li>#}
+{#              <li><img class="center" src="{% static "kat_main_site/Logo2.jpg" %}" alt="Logo2"/></li>#}
+{#              <li><img class="center" src="{% static "kat_main_site/Logo3.jpg" %}" alt="Logo3"/></li>#}
+              <li><img class="center" src="{% static "kat_main_site/Logo4.jpg" %}" alt="Logo1"/></li>
+              <li><img class="center" src="{% static "kat_main_site/Logo5.jpg" %}" alt="Logo2"/></li>
+              <li><img class="center" src="{% static "kat_main_site/Logo6.jpg" %}" alt="Logo3"/></li>
+
             </ul>
           </div>
+
+        <div class="row-fluid">
+		    </div>
+        <section class="container">
           <div class="span12">
             {% block global_content %}{% endblock %}
           </div>
@@ -88,9 +100,70 @@
 {#                </div>#}
 {#            </div>#}
         <div class="clear"></div>
+        </section>
+          <footer id="footer">
+        <div class="container">
+      <div class="row">
+        <div class="span6 timelineWidget">
+          <h2>Latest Activities</h2>
+          <div class="divider"><span></span></div>
+          <div id="twitterFrame"> <iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-timeline twitter-timeline-rendered" style="border: none; max-width: 100%; min-width: 180px;" title="Twitter Timeline" width="460" height="186"></iframe>
+
+          </div>
         </div>
-        <footer id="footer">
-            Дизайн и реализация: 3PS. Copyright &copy; 2013, <a href="http://3ps.if.ua">3PS</a>.
-        </footer>
+        <div class="span3 contactWidget">
+          <h2>Contact us</h2>
+          <div class="divider"><span></span></div>
+          <address>
+          <strong>Little NEKO</strong>
+          <p> <i class="icon-location"></i>&nbsp;77 Mass. Ave., E14/E15<br>
+            Cambridge, MA 02139-4307 USA </p>
+          <p> <i class="icon-phone"></i>&nbsp;615.987.1234 </p>
+          <p> <i class="icon-mail-alt"></i>&nbsp;<a href="mailto:little@little-neko.com">little@little-neko.com</a> </p>
+          </address>
+        </div>
+        <div class="span3 socialWidget">
+          <h2>Follow us</h2>
+          <div class="divider"><span></span></div>
+					<a class="social-network">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+              </span></a>
+          <a class="social-network">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+              </span></a>
+          <a class="social-network">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
+              </span></a>
+          <a class="social-network">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+              </span></a>
+          <a class="social-network">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+              </span></a>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed lectus in turpis consequat pharetra. Nulla velit purus, vestibulum sit amet ultrices eget, ultricies ut massa. Cras ac nulla at arcu vehicula hendrerit. </p>
+        </div>
+      </div>
+            <div class="row credits">
+                <div class="col-md-12">
+                    <div class="row copyright">
+                        <div class="col-md-12">
+                            © 2013 3PS. All rights reserved. <a href="http://3ps.if.ua">3PS</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     </body>
 </html>
