--- a/kat/kat/media/css/news.css
+++ b/kat/kat/media/css/news.css
@@ -5,7 +5,9 @@
 
 .news-list {
     margin: 20px 25px 20px;
-	color: grey;
+	/*color: grey;*/
+  	text-align: center;
+
 }
 
 .news-title {
@@ -21,13 +23,25 @@
 
 .news-date {
 	width: 120px;
-	background: #ffd64f;
+	background-color: #ffd64f;
 	text-align: center;
-	padding-right: 3px;
 	border-radius: 3px;
-	font-size: 10px;
   	color: #222D33;
+  display: inline-block;
+  padding: 2px 4px;
+  font-size: 11.844px;
+  font-weight: bold;
+  line-height: 14px;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  white-space: nowrap;
+  vertical-align: baseline;
+    -webkit-border-radius: 9px;
+     -moz-border-radius: 9px;
+          border-radius: 9px;
+}
 
+.badge-news-date{
+  	background-color: #ffd64f;
 }
 
 .news-short {
@@ -53,7 +67,19 @@
 }
 
 .news-tags {
-	background: #4bb5e7;
+	background: #DD7A14;
+  	width: 120px;
+	text-align: center;
+	border-radius: 3px;
+  	color: #97918B;
+  display: inline-block;
+  padding: 2px 4px;
+  font-size: 11.844px;
+  font-weight: bold;
+  line-height: 14px;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  white-space: nowrap;
+  vertical-align: baseline;
 }
 
 .news-tags ul {
