Change tag color

--- a/kat/kat/media/css/news.css
+++ b/kat/kat/media/css/news.css
@@ -67,11 +67,11 @@
 }
 
 .news-tags {
-	background: #DD7A14;
+	background: #e6dadc;
   	width: 120px;
 	text-align: center;
 	border-radius: 3px;
-  	color: #97918B;
+  	color: #070336;
   display: inline-block;
   padding: 2px 4px;
   font-size: 11.844px;
