--- a/kat/kat/media/css/news.css
+++ b/kat/kat/media/css/news.css
@@ -11,14 +11,7 @@
 }
 
 .news-title {
-	font-size: 20px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-}
-
-.news-title a:link, a:visited {
-	text-decoration: none;
-	color: #aa4400;
+  	color: #070336;
 }
 
 .news-date {
@@ -82,21 +75,30 @@
   vertical-align: baseline;
 }
 
-.news-tags ul {
-	list-style: none;
+.news-hr {
+  height: 1px;
+  background: #333;
+  background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc);
+  background-image: -moz-linear-gradient(left, #ccc, #333, #ccc);
+  background-image: -ms-linear-gradient(left, #ccc, #333, #ccc);
+  background-image: -o-linear-gradient(left, #ccc, #333, #ccc);
 }
 
-.news-tags ul li {
-	display: inline;
-	margin-left: 15px;
-}
+/*.news-tags ul {*/
+	/*list-style: none;*/
+/*}*/
 
-.news-tags ul li a:link, a:visited {
-	text-decoration: none;
-	color: #e79a67;
-}
+/*.news-tags ul li {*/
+	/*display: inline;*/
+	/*margin-left: 15px;*/
+/*}*/
 
-.news-tags ul li a:visited {
-	text-decoration: none;
-	color: #e79a67;
-}
+/*.news-tags ul li a:link, a:visited {*/
+	/*text-decoration: none;*/
+	/*color: #e79a67;*/
+/*}*/
+
+/*.news-tags ul li a:visited {*/
+	/*text-decoration: none;*/
+	/*color: #e79a67;*/
+/*}*/
